<resources>
    <string name="app_name">Score Counter 66</string>
    <!-- Displays -->
    <string name="me">Me</string>
    <string name="you">You</string>
    <string name="initNumber">0</string>
    <string name="_120">120</string>
    <string name="reset">reset</string>
    <string name="remaining_points">Remaining points:</string>
    <string name="undo">undo</string>

    <!--Players -->
    <integer name="playersNumber">2</integer>
    <string name="Player1">Player1</string>
    <string name="Player2">Player2</string>
    <string name="meld_20">Meld +20</string>
    <string name="no_melds">No melds</string>

    <!--Player Cards -->


</resources>
