<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.scorecounter66.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/me"
                android:textColor="#616161"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/score_Player1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/initNumber"
                android:textColor="@android:color/black"
                android:textSize="56sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="60dp">

                <ImageView
                    android:id="@+id/ace_Player1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="clickAcePlayer1"
                    android:src="@drawable/ace_of_clubs_white" />

                <ImageView
                    android:id="@+id/teen_Player1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="clickTeenPlayer1"
                    android:src="@drawable/teen_of_clubs_white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="60dp">

                <ImageView
                    android:id="@+id/king_Player1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="clickKingPlayer1"
                    android:src="@drawable/king_of_clubs_white" />

                <ImageView
                    android:id="@+id/queen_Player1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="clickQueenPlayer1"
                    android:src="@drawable/queen_of_clubs_white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="60dp">

                <ImageView
                    android:id="@+id/jack_Player1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="clickJackPlayer1"
                    android:src="@drawable/jack_of_clubs_white" />

                <ImageView
                    android:id="@+id/nine_Player1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="clickNinePlayer1"
                    android:src="@drawable/nine_of_clubs_white" />

            </LinearLayout>

            <Button
                android:id="@+id/meld_Player1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="clickMeldPlayer1"
                android:text="@string/meld_20" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/you"
                android:textColor="#616161"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/score_Player2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/initNumber"
                android:textColor="@android:color/black"
                android:textSize="56sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="60dp">

                <ImageView
                    android:id="@+id/ace_Player2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="clickAcePlayer2"
                    android:src="@drawable/ace_of_clubs_white" />

                <ImageView
                    android:id="@+id/teen_Player2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="clickTeenPlayer2"
                    android:src="@drawable/teen_of_clubs_white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="60dp">

                <ImageView
                    android:id="@+id/king_Player2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="clickKingPlayer2"
                    android:src="@drawable/king_of_clubs_white" />

                <ImageView
                    android:id="@+id/queen_Player2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="clickQueenPlayer2"
                    android:src="@drawable/queen_of_clubs_white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="60dp">

                <ImageView
                    android:id="@+id/jack_Player2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="clickJackPlayer2"
                    android:src="@drawable/jack_of_clubs_white" />

                <ImageView
                    android:id="@+id/nine_Player2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="clickNinePlayer2"
                    android:src="@drawable/nine_of_clubs_white" />

            </LinearLayout>

            <Button
                android:id="@+id/meld_Player2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="clickMeldPlayer2"
                android:text="Meld +20" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="16dp"
        android:text="@string/reset"
        android:onClick="reset"
        android:textAllCaps="true" />

    <TextView
        android:id="@+id/remaining_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/_120"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/remaining_points"
        android:layout_centerHorizontal="true"
        android:text="@string/remaing_points"
        android:textAlignment="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="16dp"
        android:text="@string/undo"
        android:textAllCaps="true" />

</RelativeLayout>


